--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -501,10 +501,13 @@
     padding: 8px 8px;
     cursor: pointer;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .post__activity:hover {
-    background: #e6e6e6;
+    background: var(--blue-white-color);
     color: #2e2e2e;
 }
 
@@ -978,9 +981,15 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 .form__edit-content {
-    padding: 12px 0;
+    width: 100%;
+    padding: 12px;
     font-size: 18px;
     color: var(--gray-text-color);
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    background: var(--blue-white-color);
+    resize: none;
 }
 
 .mode-list {
@@ -1031,6 +1040,7 @@ input[type=number]::-webkit-inner-spin-button {
 .form__edit__image {
     width: 100%;
     position: relative;
+    min-height: 80px;
 }
 
 #edit-post-image {
@@ -1044,7 +1054,8 @@ input[type=number]::-webkit-inner-spin-button {
     margin-top: 10px;
     margin-left: 10px;
     padding: 8px 22px;
-    background: var(--white-color);
+    background: var(--blue-white-color);
+    border: 1px solid var(--blue-white-color);
     border-radius: 12px;
     font-size: 16px;
     cursor: pointer;
@@ -1132,7 +1143,7 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 .button__upload-image {
-    padding: 12px 56px;
+    padding: 12px 28px;
     border-radius: 8px;
     border: none;
     cursor: pointer;
